Add new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
   <div class="space"></div>
 
   <!-- Content section base on router -->
-  <router-outlet></router-outlet>
+  <div id="router">
+    <router-outlet></router-outlet>
+  </div>
 
 </div>
 
