--- a/src/app/form-input/surname/surname.component.html
+++ b/src/app/form-input/surname/surname.component.html
@@ -1,4 +1,4 @@
 <mat-form-field appearance="fill">
     <mat-label>Nom</mat-label>
-    <input matInput #surname placeholder="Ex : Baetslé" (change)="updateSurname(surname.value)">
+    <input matInput #surnameInput placeholder="Ex : Baetslé" (change)="updateSurname(surnameInput.value)" value="{{surname}}">
 </mat-form-field>
