--- a/src/app/external-user/personal-information/personal-information.component.html
+++ b/src/app/external-user/personal-information/personal-information.component.html
@@ -1,22 +1,34 @@
 <div id="personalInformationSection">
     <!--Title -->
-    <h1>Informations générales</h1>
-
-    <!-- Firstname -->
-    <app-firstname [firstname]="firstname" (firstnameEvent)="getFirstname($event)"></app-firstname>
+    <h1>Informations générales de l'enfant</h1>
 
     <!-- Surname -->
     <app-surname [surname]="surname" (surnameEvent)="getSurname($event)"></app-surname>
 
+    <!-- Firstname -->
+    <app-firstname [firstname]="firstname" (firstnameEvent)="getFirstname($event)"></app-firstname>
+
     <!-- Birthdate -->
     <app-birthday [birthday]="birthday" (birthdayEvent)="getBirthday($event)"></app-birthday>
 
+    <!-- Firstname -->
+    <app-address 
+        [street]="street" (streetEvent)="getStreet($event)"
+        [homeNumber]="homeNumber" (homeNumberEvent)="getHomeNumber($event)"
+        [postalCode]="postalCode" (postalCodeEvent)="getPostalCode($event)"
+        [village]="village" (villageEvent)="getVillage($event)"
+    ></app-address>
+
     <!-- Button -->
     <button mat-raised-button color="primary" (click)="submit()" id="submit">Valider</button>
-
+    
     <!-- Test only-->
     <p>Prénom : {{firstname}}</p>
     <p>Nom : {{surname}}</p>
     <p>Anniversaire : {{birthday}}</p>
+    <p>Rue : {{street}}</p>
+    <p>N° : {{homeNumber}}</p>
+    <p>Code postal : {{postalCode}}</p>
+    <p>Village : {{village}}</p>
 
 </div>
