--- a/src/app/external-user/personal-information/personal-information.component.html
+++ b/src/app/external-user/personal-information/personal-information.component.html
@@ -7,6 +7,7 @@
         [surname]="surname" 
         [required]="true"
         (surnameEvent)="getSurname($event)"
+        (validityEvent)="getSurnameValidity($event)"
     ></app-surname>
 
     <!-- Firstname -->
@@ -14,6 +15,7 @@
         [firstname]="firstname" 
         [required]="true"
         (firstnameEvent)="getFirstname($event)"
+        (validityEvent)="getFirstnameValidity($event)"
     ></app-firstname>
 
     <!-- Birthdate -->
@@ -25,10 +27,10 @@
 
     <!-- Firstname -->
     <app-address 
-        [street]="street" (streetEvent)="getStreet($event)"
-        [homeNumber]="homeNumber" (homeNumberEvent)="getHomeNumber($event)"
-        [postalCode]="postalCode" (postalCodeEvent)="getPostalCode($event)"
-        [village]="village" (villageEvent)="getVillage($event)"
+        [street]="street" (streetEvent)="getStreet($event)" (streetValidityEvent)="getStreetValidity($event)"
+        [homeNumber]="homeNumber" (homeNumberEvent)="getHomeNumber($event)" (homeNumberValidityEvent)="getHomeNumberValidity($event)"
+        [postalCode]="postalCode" (postalCodeEvent)="getPostalCode($event)" (postalCodeValidityEvent)="getPostalCodeValidity($event)"
+        [village]="village" (villageEvent)="getVillage($event)" (villageValidityEvent)="getVillageValidity($event)"
         [required]="true"
     ></app-address>
 
@@ -36,12 +38,12 @@
     <button mat-raised-button color="primary" (click)="submit()" id="submit">Valider</button>
     
     <!-- Test only-->
-    <p>Prénom : {{firstname}}</p>
-    <p>Nom : {{surname}}</p>
-    <p>Anniversaire : {{birthday}}</p>
-    <p>Rue : {{street}}</p>
-    <p>N° : {{homeNumber}}</p>
-    <p>Code postal : {{postalCode}}</p>
-    <p>Village : {{village}}</p>
+    <p>Prénom : {{firstname}} ({{firstnameValidity}})</p>
+    <p>Nom : {{surname}} ({{surnameValidity}})</p>
+    <p>Anniversaire : {{birthday}} ({{birthdayValidity}})</p>
+    <p>Rue : {{street}} ({{streetValidity}})</p>
+    <p>N° : {{homeNumber}} ({{homeNumberValidity}})</p>
+    <p>Code postal : {{postalCode}} ({{postalCodeValidity}})</p>
+    <p>Village : {{village}} ({{villageValidity}})</p>
 
 </div>
