--- a/src/app/form-input/firstname/firstname.component.html
+++ b/src/app/form-input/firstname/firstname.component.html
@@ -3,7 +3,7 @@
     <input matInput #firstnameInput 
         placeholder="Ex : Antoine" 
         (change)="updateFirstName(firstnameInput.value)" 
-        value="{{firstname}}"
-        required="{{required}}"
+        (focusout)="updateFirstName(firstnameInput.value)" 
+        [formControl]="firstnameValidator"
     >
 </mat-form-field>
